force-app/main/default/objects/Calendar_Sync_Notification__e/Calendar_Sync_Notification__e.object-meta.xml
<CustomObject>
    <label>Calendar Sync Notification</label>
    <pluralLabel>Calendar Sync Notifications</pluralLabel>
</CustomObject>