force-app/main/default/objects/Calendar_Sync_Notification__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Salesforce Account ID associated with the calendar change.</description>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>