force-app/main/default/objects/Calendar_Sync_Notification__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action type: CREATED, UPDATED, DELETED.</description>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>