force-app/main/default/objects/Calendar_Sync_Notification__e/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <description>Salesforce Event ID that was modified/synced.</description>
    <label>Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>