force-app/main/default/objects/Calendar_Sync_Notification__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp when the sync notification occurred.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>